<resources>
    <string name="app_name">Cidade Iluminada</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_protocolo">Nova denúncia</string>
    <string name="title_activity_configure">ConfigureActivity</string>
    <string name="title_activity_protocolos_lista">ProtocolosListaActivity</string>
    <string name="descricaoProtocoloLabel">Descrição</string>
    <string name="openGalleryButtonLabel">Galeria</string>
    <string name="protocoloAddressSectionLabel">Endereço</string>
    <string name="protocoloCEPLabel">CEP</string>
    <string name="protocoloBairroLabel">Bairro</string>
    <string name="protocoloRuaLabel">Rua</string>
    <string name="openProtocoloLabel">Fazer denuncia</string>
    <string name="openProtocolosListLabel">Consultar Protocolos</string>
    <string name="openSettingsLabel">Configurações</string>
    <string name="protocoloNumeroLabel">Número</string>
    <string name="novoProtocoloActionLabel">Novo Protocolo</string>
    <string name="openCameraButtonContentDescription">Tirar foto</string>
</resources>
