<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:columnCount="1"
    android:rowCount="3"
    android:orientation="vertical">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/openProtocoloLabel"
        android:id="@+id/openProtocoloButton"
        android:onClick="openProtocoloActivity"
        android:drawableStart="@drawable/man282"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/mainMenuButtonMargin"
        android:layout_marginBottom="@dimen/mainMenuButtonMargin" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/openProtocolosListLabel"
        android:id="@+id/openProtocolosListButton"
        android:onClick="openListaProtocolosActivity"
        android:drawableStart="@drawable/eye46"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/mainMenuButtonMargin"
        android:layout_marginBottom="@dimen/mainMenuButtonMargin"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/openSettingsLabel"
        android:id="@+id/openSettingsButton"
        android:onClick="openConfiguracoesActivity"
        android:drawableStart="@drawable/settings48"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/mainMenuButtonMargin"
        android:layout_marginBottom="@dimen/mainMenuButtonMargin"/>

</LinearLayout>

